[package]
name = "folklore"
version = "0.1.0"
authors = ["j"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "*"
select = "*"
scraper = "*"
regex = "1"
tokio = {version = "0.2", features = ["full"]}
lazy_static = "1.4"
itertools = "0.9"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.1"
url = "2"
bimap = "0"
rusqlite = {version = "0", features = ["blob"]}
gflags = "0.3"
bincode = "1"
r2d2_sqlite = "0.17"
r2d2 = "0.8.9"
futures = "0"