[package]
name = "folklore"
version = "0.1.0"
authors = ["j"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["rustls", "hyper-rustls", "rustls-tls", "gzip"]}
select = "*"
scraper = "*"
regex = "1"
tokio = {version = "1.35", features = ["full"]}
lazy_static = "1.4"
itertools = "0.12"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.1"
url = "2"
bimap = "0"
gflags = "0.3"
bincode = "1"
futures = "0"
patricia_tree = "0"
serde_json = "1"
